Avoid too many memory copy